# Poonto_Image_Downloader

./: .gitignore  README.md  logs.txt  pyproject.toml  server.py
Image_Downloader/: __main__.py  app.py  manage.py
Image_Downloader/SupplierTemplate/Suppliers/: __main__.py
Image_Downloader/backend/: downloader.py  exports.py  pagegetter.py  utils.py  worksheet.py  xmlreader.py
Image_Downloader/backend/poonto/: imagecropper.py
Image_Downloader/backend/poonto/kentia/: remove_new.py
Image_Downloader/suppliers/artelibre/: __main__.py  links.txt
Image_Downloader/suppliers/estia/: __main__.py
Image_Downloader/suppliers/kentia/: __main__.py
Image_Downloader/suppliers/vamvax/: __main__.py
