
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poonto-downloader"
version = "1.0"
dependencies = ['pandas', 'pillow', 'requests', 'bs4', 'xmltodict']
requires-python = ">=3.8"
authors = [
{name = "YourName", email = "Youremail@mail.tld"},
]
maintainers = []
description = "Add a description of your project"
readme = "README.md"
classifiers = [
"Programming Language :: Python",
]

[tool.setuptools]
packages = ["Image_Downloader", "Image_Downloader.backend", "Image_Downloader.suppliers.*"]

[project.optional-dependencies]

[project.urls]
Homepage = ""
Documentation = ""
Repository = ""
"Bug Tracker" = ""
Changelog = ""

[project.scripts]
poonto-downloader = "Image_Downloader:__main__.main"

[project.gui-scripts]

[project.entry-points]
