
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Image_Downloader"
version = "1.0"
dependencies = ["pandas", "pillow", "requests", "bs4", "xmltodict", "openpyxl"]
requires-python = ">=3.10"
authors = [
{name = "Eli Stouraitis", email = "h.stoyraitis@gmail.com"},
]
maintainers = []
description = "Add a description of your project"
readme = "README.md"
classifiers = [
"Programming Language :: Python",
]

[tool.setuptools]
packages = ["Image_Downloader", "Image_Downloader.backend", "Image_Downloader.suppliers.artelibre", "Image_Downloader.suppliers.vamvax", "Image_Downloader.suppliers.kentia", "Image_Downloader.suppliers.estia"]

[project.optional-dependencies]

[project.urls]
Homepage = ""
Documentation = ""
Repository = ""
"Bug Tracker" = ""
Changelog = ""

[project.scripts]
poonto-downloader = "Image_Downloader:__main__.main"

[project.gui-scripts]

[project.entry-points]
